modify models (23 oct 2024)

--- a/mysite/templates/single-post.html
+++ b/mysite/templates/single-post.html
@@ -18,53 +18,16 @@
                             </h2>
 
                             <div class="post-meta">
-                                <span class="text-uppercase font-sm letter-spacing-1 mr-3">by Liam</span>
-                                <span class="text-uppercase font-sm letter-spacing-1">January 17,2019</span>
+                                <span class="text-uppercase font-sm letter-spacing-1 mr-3">{{post.author.user}}</span>
+                                <span class="text-uppercase font-sm letter-spacing-1">{{post.date_posted|date:"F j, Y"}}</span>
                             </div>
                             <div class="post-featured-image mt-5">
-                                <img src="images/fashion/bg-banner.jpg" class="img-fluid w-100" alt="featured-image">
+                                <img src=" {% static 'images/fashion/bg-banner.jpg' %} " class="img-fluid w-100" alt="featured-image">
                             </div>
                         </div>
                         <div class="post-body">
                             <div class="entry-content">
-                                <p> It was a cheerful prospect. I asked Perry what he thought about it; but he only
-                                    shrugged his shoulders and continued a longwinded prayer he had been at for some
-                                    time. He was wont to say that the only redeeming feature of our captivity was the
-                                    ample time it gave him for the improvisation of prayers—it was becoming an obsession
-                                    with him.</p>
-                                <h2 class="mt-4 mb-3">Perfect design & code delivered to you</h2>
-                                <p> The Sagoths had begun to take notice of his habit of declaiming throughout entire
-                                    marches. One of them asked him what he was saying—to whom he was talking. The
-                                    question gave me an idea, so I answered quickly before Perry could say anything.</p>
-                                <blockquote>
-                                    <i class="ti-quote-left mr-2"></i>A wise girls knows her limit to touch the
-                                    sky.Repellat sapiente neque iusto praesentium adipisci.The question gave me an idea,
-                                    so I answered quickly before Perry could say anything.<i
-                                        class="ti-quote-right ml-2"></i>
-                                </blockquote>
-
-                                <div class="row">
-                                    <div class="col-lg-6 col-md-6">
-                                        <img src="images/fashion/single-img1.png" alt="post-ads"
-                                            class="img-fluid mr-4 w-100">
-                                    </div>
-                                    <div class="col-lg-6 col-md-6">
-                                        <img src="images/fashion/single-img2.png" alt="post-ads"
-                                            class="img-fluid mr-4 w-100">
-                                    </div>
-                                </div>
-                                <h3 class="mt-5 mb-3">Enjoying the view of summer</h3>
-
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde cum delectus
-                                    exercitationem
-                                    natus quidem enim error suscipit. Iure cupiditate nobis quaerat consectetur! Vero
-                                    aliquam,
-                                    amet ipsum ullam reiciendis nostrum voluptate accusantium provident ut blanditiis
-                                    incidunt. </p>
-
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ab ratione animi
-                                    nobis in et consequatur
-                                    earum modi repellendus, qui, non debitis pariatur tempora consequuntur!</p>
+                                <p>{{post.content}}</p>
                             </div>
 
                             <div class="post-tags py-4">
@@ -82,6 +45,7 @@
                                 <div class="post-share">
                                     <span class="count-number-like">2</span>
                                     <a class="penci-post-like single-like-button"><i class="ti-heart"></i></a>
+                                    <span class="count-number-like">{{post.view_count}} view{{post.view_count|pluralize}}</span>
                                 </div>
 
                                 <div class="list-posts-share">
@@ -96,15 +60,14 @@
 
                     <div class="post-author d-flex my-5">
                         <div class="author-img">
-                            <img alt="" src="images/author.jpg" class="avatar avatar-100 photo" width="100"
+                            <img alt="" src="{% static 'images/author.jpg' %} " class="avatar avatar-100 photo" width="100"
                                 height="100">
                         </div>
 
                         <div class="author-content pl-4">
-                            <h4 class="mb-3"><a href="#" title="" rel="author" class="text-capitalize">Themefisher</a>
+                            <h4 class="mb-3"><a href="#" title="" rel="author" class="text-capitalize">{{post.author.user}}</a>
                             </h4>
-                            <p>Hey there. My name is Liam. I was born with the love for traveling. I also love taking
-                                photos with my phone in order to capture moment..</p>
+                            <p>{{post.author.bio}}</p>
 
                             <a target="_blank" class="author-social" href="#"><i class="ti-facebook"></i></a>
                             <a target="_blank" class="author-social" href="#"><i class="ti-twitter"></i></a>
@@ -240,12 +203,11 @@
                         <div class="sidebar-wrap mt-5 mt-lg-0">
                             <div class="sidebar-widget about mb-5 text-center p-3">
                                 <div class="about-author">
-                                    <img src="images/author.jpg" alt="" class="img-fluid">
+                                    <img src="{% static 'images/author.jpg' %} " alt="" class="img-fluid">
                                 </div>
-                                <h4 class="mb-0 mt-4">Liam Mason</h4>
+                                <h4 class="mb-0 mt-4">{{post.author.user}}</h4>
                                 <p>Travel Blogger</p>
-                                <p>I'm Liam, last year I decided to quit my job and travel the world. You can follow my
-                                    journey on this blog!</p>
+                                <p>{{post.author.bio}}</p>
                                 <img src="images/liammason.png" alt="" class="img-fluid">
                             </div>
 
@@ -297,22 +259,12 @@
                             <div class="sidebar-widget category mb-5">
                                 <h4 class="text-center widget-title">Catgeories</h4>
                                 <ul class="list-unstyled">
+                                    {% for post in category_by_author %}
                                     <li class="align-items-center d-flex justify-content-between">
-                                        <a href="#">Innovation</a>
+                                        <a href="#">{{post.category_name}}</a>
                                         <span>14</span>
                                     </li>
-                                    <li class="align-items-center d-flex justify-content-between">
-                                        <a href="#">Software</a>
-                                        <span>2</span>
-                                    </li>
-                                    <li class="align-items-center d-flex justify-content-between">
-                                        <a href="#">Social</a>
-                                        <span>10</span>
-                                    </li>
-                                    <li class="align-items-center d-flex justify-content-between">
-                                        <a href="#">Trends</a>
-                                        <span>5</span>
-                                    </li>
+                                    {% endfor %}
                                 </ul>
                             </div>
 
