--- a/mysite/templates/single-post.html
+++ b/mysite/templates/single-post.html
@@ -173,29 +173,31 @@
                             </div>
                         </div>
                     </div>
-
-                    <form class="comment-form mb-5 gray-bg p-5" id="comment-form">
+                    {% comment %} start comment {% endcomment %}
+                    <form class="comment-form mb-5 gray-bg p-5" method="post" action="#" enctype="multipart/form-data">
+                        {% csrf_token %}
                         <h3 class="mb-4 text-center">Leave a comment</h3>
                         <div class="row">
                             <div class="col-lg-12">
-                                <textarea class="form-control mb-3" name="comment" id="comment" cols="30" rows="5"
-                                    placeholder="Comment"></textarea>
+                                <textarea class="form-control mb-3" name="content" id="content" cols="30" rows="5"
+                                    placeholder="Comment here..."></textarea>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <input class="form-control" type="text" name="name" id="name" placeholder="Name:">
+                                    <input class="form-control" type="text" name="name" id="name" placeholder="Name">
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <input class="form-control" type="text" name="mail" id="mail" placeholder="Email:">
+                                    <input class="form-control" type="text" name="email" id="email" placeholder="Email">
+                                    <input type="hidden" name="post_id" value="{{post.id}}">
                                 </div>
                             </div>
                         </div>
 
-                        <input class="btn btn-primary" type="submit" name="submit-contact" id="submit_contact"
-                            value="Submit Message">
+                        <input class="btn btn-primary" type="submit" value="Submit Message">
                     </form>
+                    {% comment %} end comment {% endcomment %}
 
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
