--- a/mysite/templates/single-post.html
+++ b/mysite/templates/single-post.html
@@ -130,90 +130,77 @@
                             </div>
                         </div>
                     </div>
-                    {% comment %} comment render {% endcomment %}
+
                    {% comment %} comment render {% endcomment %}
-                    {% if comments %}
-                    <div class="comment-area my-5">
-                        <h3 class="mb-4 text-center">{{ comment_count }} Comment{{ comment_count | pluralize }}</h3>
-                        {% for comment in comments %}
-                        <div class="comment-area
-                    -box media mb-4">
-                            <img alt="" src="images/blog-user-2.jpg" class="img-fluid float-left mr-3 mt-2">
-
-                            <div class="media-body ml-4">
-                                <h4 class="mb-0">{{comment.name}}</h4>
-                                <span class="date-comm font-sm text-capitalize text-color"><i
-                                        class="ti-time mr-2"></i>{{comment.date_posted|date}}</span>
-
-                                <div class="comment-content mt-3">
-                                    <
-                    p>{{comment.content}}</p>
-                                </div>
-                                <div class="comment-meta mt-4 mt-lg-0 mt-md-0">
-                                    <a href="#" class="text-underline" data-toggle="modal" data-target="#replyModal{{ comment.id }}">Reply</a>
-                                </div>
-                            </div>
-                            
-                            <!-- Replies are indented -->
-                            {% for reply in comment.replies.all %}
-                            <div class="media-body ml-4 pl-4 border-left"> 
-                                <h4 class="mb-0">{{reply.name}}</h4>
-                                <span class="date-comm font-sm text-capitalize text-color"><i
-                                        class="ti-time mr-2"></i>{{reply.date_posted|date}}</span>
-
-                                <div class="comment-content mt-3">
-                                    <p>{{reply.content}}</p>
-                                </div>
-                                
-                            </div>
-                            {% endfor %}
-                        </div>
-
-                        <!-- Reply Modal -->
-                        <div class="modal fade" id="replyModal{{ comment.id }}" tabindex="-1" role="dialog
-                    " aria-labelledby="replyModalLabel{{ comment.id }}" aria-hidden="true">
-                            <div class="modal-dialog" role="document">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title" id="replyModalLabel{{ comment.id }}">Reply to {{ comment.name }}</h5>
-                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                            <span aria-hidden="true">&times;</span>
-                                        </button>
-                                    </div>
-                                    <div class="modal-body">
-                                        <form class="comment-form" method="post" action="#" enctype="multipart/form-data">
-                                            {% csrf_token %}
-                                            <div class="row">
-                                                <div class="col-lg-12">
-                                                    <textarea class="form-control mb-3" name="content" id="content" cols="30" rows="5"
-                                                        placeholder="Comment here..."></textarea>
-                                                </div>
-                                                <div class="col-md-6">
-                                                    <div class="form-group">
-                                                        <input class="form-control" type="text" name="name" id="name" placeholder="Name">
-                                                    </div>
-                                                </div>
-                                                <div class="col-md-6">
-                                                    <div class="form-group">
-                                                        <input class="form-control" type="text" name="email" id="email" placeholder="Email">
-                                                        <input type="hidden" name="post_id" value="{{post.id}}">
-                                                        <input type="hidden" name="parent" value="{{comment.id}}"> 
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <button type="submit" class="btn btn-primary">Submit Reply</button>
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        {% endfor %}
-                    </div>
-                    {% else %}
-                    <div class="comment-area my-5">
-                        <h3 class="mb-4 text-center">No Comments</h3>
-                    </div>
-                    {% endif %}
+                   {% if comments %}
+                   <h4 class="text-center widget-title">{{comment_count}} Comment{{comment_count|pluralize}}</h4>
+                   {% for comment in comments %}
+                   <div class="sidebar-widget mb-5 ">
+                       <div class="sidebar-post-item-big">
+                           <div class="mt-3 media-body">
+                               <span class="text-muted letter-spacing
+                text-uppercase font-sm">{{comment.name}} | {{comment.date_posted|date}}</span>
+                               <p>{{comment.content}}</p>
+                           </div>
+                           <div class="comment-meta mt-4 mt-lg-0 mt-md-0">
+                               <a href="#" class="text-underline" data-toggle="modal" data-target="#replyModal{{ comment.id }}">Reply</a>
+                           </div>
+                       </div>
+                       {% for reply in comment.replies.all %}
+                       <div class="media border-bottom py
+               -3 sidebar-post-item">
+                           <a href="#"><img class="mr-4" src="images/news/thumb-1.jpg" alt=""></a>
+                           <div class="media-body">
+                               <span class="text-muted letter-spacing text-uppercase font-sm">{{reply.name}} | {{reply.date_posted|date}}</span>
+                               <p>{{reply.content}}</p>
+                           </div>
+                       </div>
+                       {% endfor %}
+                       <!-- Reply Modal -->
+                       <div class="modal fade" id="replyModal{{ comment.id }}" tabindex="-1" role="dialog" aria-labelledby="replyModalLabel{{ comment.id }}" aria-hidden="true">
+                           <div class="modal-dialog" role="document">
+                               <div class="modal-content">
+                                   <div class="modal-header">
+                                       <h5 class="modal-title" id="replyModalLabel{{ comment.id }}">Reply to {{ comment.name }}</h5>
+                                       <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                           <span aria-hidden="true">&times
+               ;</span>
+                                       </button>
+                                   </div>
+                                   <div class="modal-body">
+                                       <form class="comment-form" method="post" action="#" enctype="multipart/form-data">
+                                           {% csrf_token %}
+                                           <div class="row">
+                                               <div class="col-lg-12">
+                                                   <textarea class="form-control mb-3" name="content" id="content" cols="30" rows="5" placeholder="Comment here..."></textarea>
+                                               </div>
+                                               <div class="col-md-6">
+                                                   <div class="form-group">
+                                                       <input class="form-control" type="text" name="name" id="name" placeholder="Name">
+                                                   </div>
+                                               </div>
+                                               <div class="col-md-6">
+                                                   <div class="form-group">
+                                                       <input class="form-control" type="text" name="email" id="email" placeholder="Email">
+                                                       <input type="hidden" name="post_id" value="{{post.id}}">
+                                                       <input type="hidden" name="parent" value="{{comment.id}}"> 
+                                                   </div>
+                                               </div>
+                                           </div>
+                                           <button type="submit" class="btn btn-primary">Submit Reply</button>
+                                       </form>
+                                   </div>
+                               </div>
+                           </div>
+                       </div>
+                   </div>
+                   {% endfor %}
+               {% else %}
+                   <div class="comment-area my-5">
+                       <h3 class="mb-4 text-center">No Comments</h3>
+                   </div>
+               {% endif %}
+               
                     {% comment %} end comment render {% endcomment %}
                     {% comment %} start comment {% endcomment %}
                     <form class="comment-form mb-5 gray-bg p-5" method="post" action="#" enctype="multipart/form-data">
@@ -269,34 +256,15 @@
                             <div class="sidebar-widget mb-5 ">
                                 <h4 class="text-center widget-title">Trending Posts</h4>
 
-                                <div class="sidebar-post-item-big">
-                                    <a href="blog-single.html"><img src="images/news/img-1.jpg" alt=""
-                                            class="img-fluid"></a>
-                                    <div class="mt-3 media-body">
-                                        <span class="text-muted letter-spacing text-uppercase font-sm">September 10,
-                                            2019</span>
-                                        <h4><a href="blog-single.html">Meeting With Clarissa, Founder Of Purple
-                                                Conversation App</a></h4>
-                                    </div>
-                                </div>
-
+                                {% for by_author in  post_by_author %}     
                                 <div class="media border-bottom py-3 sidebar-post-item">
                                     <a href="#"><img class="mr-4" src="images/news/thumb-1.jpg" alt=""></a>
                                     <div class="media-body">
-                                        <span class="text-muted letter-spacing text-uppercase font-sm">September 10,
-                                            2019</span>
-                                        <h4><a href="blog-single.html">Thoughtful living in los Angeles</a></h4>
+                                        <span class="text-muted letter-spacing text-uppercase font-sm">{{by_author.date_posted|date}}</span>
+                                        <h4><a href="blog-single.html">{{by_author.title}}</a></h4>
                                     </div>
                                 </div>
-
-                                <div class="media py-3 sidebar-post-item">
-                                    <a href="#"><img class="mr-4" src="images/news/thumb-2.jpg" alt=""></a>
-                                    <div class="media-body">
-                                        <span class="text-muted letter-spacing text-uppercase font-sm">September 10,
-                                            2019</span>
-                                        <h4><a href="blog-single.html">Vivamus molestie gravida turpis.</a></h4>
-                                    </div>
-                                </div>
+                                {% endfor %}
                             </div>
 
 
@@ -330,27 +298,4 @@
     </section>
 
 
-
-
-{% comment %} reply modal {% endcomment %}
-<!-- Button trigger modal -->
-  <!-- Modal -->
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          ...
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
-      </div>
-    </div>
-  </div>
-{% comment %} end reply modal {% endcomment %}
 {% include "includes/footer.html" %}
